--- a/gravitee-am-gateway/gravitee-am-gateway-handler/gravitee-am-gateway-handler-core/src/main/resources/webroot/views/webauthn_register.html
+++ b/gravitee-am-gateway/gravitee-am-gateway-handler/gravitee-am-gateway-handler-core/src/main/resources/webroot/views/webauthn_register.html
@@ -7,13 +7,13 @@
     <title>WebAuthn Register</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" th:href="@{../assets/material/material.blue_grey-blue.min.css}">
-    <link rel="stylesheet" th:href="@{../assets/material/material.icons.css}">
-    <link rel="stylesheet" th:href="@{../assets/font-awesome/css/font-awesome.min.css}">
-    <link rel="stylesheet" th:href="@{../assets/css/webauthn_register.css}">
+    <link rel="stylesheet" th:href="@{../../assets/material/material.blue_grey-blue.min.css}">
+    <link rel="stylesheet" th:href="@{../../assets/material/material.icons.css}">
+    <link rel="stylesheet" th:href="@{../../assets/font-awesome/css/font-awesome.min.css}">
+    <link rel="stylesheet" th:href="@{../../assets/css/webauthn_register.css}">
 
     <!-- Favicon and touch icons -->
-    <link rel="shortcut icon" th:href="@{../assets/ico/favicon.ico}">
+    <link rel="shortcut icon" th:href="@{../../assets/ico/favicon.ico}">
 </head>
 <body>
     <div class="mdl-layout mdl-js-layout">
@@ -71,7 +71,7 @@
             </div>
         </div>
     </div>
-    <script th:src="@{../assets/js/webauthn.auth-v2.js}"></script>
-    <script th:src="@{../assets/js/webauthn-register-v2.js}"></script>
+    <script th:src="@{../../assets/js/webauthn.auth-v2.js}"></script>
+    <script th:src="@{../../assets/js/webauthn-register-v2.js}"></script>
 </body>
 </html>
